removed an image

--- a/index.html
+++ b/index.html
@@ -199,9 +199,7 @@
         <div class="twitter">
           <img src="images/icon-twitter.svg" />
         </div>
-        <div class="pinterest">
-          <img src="images/icon-pinterest.svg" />
-        </div>
+        <div class="pinterest"></div>
       </div>
     </main>
   </body>
